[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/spritesheets/slicon bat.png" type="Texture" id=1]
[ext_resource path="res://scenes/kineamtics/enemies/silicon_bat/Silicon Bat.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/enemy_hp_green_fill.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/enemy_hp_outline.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 11.0485
height = 5.69387

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}

[sub_resource type="Animation" id=3]
resource_name = "dead"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=4]
resource_name = "fly"

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 164.609

[node name="Silicon Bat" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 12
frame = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 2 )
anims/dead = SubResource( 3 )
anims/fly = SubResource( 4 )
anims/idle = SubResource( 5 )

[node name="hpbar" type="TextureProgress" parent="."]
margin_left = -22.0
margin_top = -24.0
margin_right = 18.0
margin_bottom = -18.0
value = 100.0
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 6 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -14, 14 )
scale = Vector2( -8570.6, 0.247762 )

[connection signal="killed" from="." to="." method="_on_Silicon_Bat_killed"]
[connection signal="update_health" from="." to="." method="_on_Silicon_Bat_update_health"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
